@@ -1,10 +1,12 @@
 -----------------------------------------------------------------------------------------
-	$Id: ChangeLog,v 1.696 2010-01-14 16:47:35 guru Exp $
+	$Id: ChangeLog,v 1.697 2010-01-15 21:25:02 guru Exp $
 -----------------------------------------------------------------------------------------
 
 -----------------------------------------------------------------------------------------
 2010-01-15	pwessel
 	* GMT 4.5.2 finalized and released
+	* install_gmt, web/Perl scripts:	Offer choice between default, 32-bit, or 64-bit
+				compilations.
 -----------------------------------------------------------------------------------------
 
 2010-01-14	pwessel
